--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-i18nify",
+  "name": "@hitask/react-i18nify",
   "version": "1.11.18",
   "description": "Simple i18n translation and localization components and helpers for React applications.",
   "main": "./build/index.js",
